stopped text on button from spilling over into background

--- a/less/howto.less
+++ b/less/howto.less
@@ -201,7 +201,7 @@ font-size: 8px;}
     border: 1px double black;
     font-size: 16px;
     background: white;
-    width: 150px;
+    width: 200px;
     height: 70px;
     margin-top: 10px;
     cursor: pointer;
